# ransac_corridor_control

./: .swo  CMakeLists.txt  DEPENDENCIES.md  LICENSE.txt  README.md  package.xml
TODO/: README.txt  ransac_classes.hpp
include/ransac_corridor_control/: control.hpp  controlPIV.hpp  control_piv.hpp  converter.hpp  handlePoints.hpp  handle_points.hpp  kalman.hpp  laser.hpp  ransac2Dline.hpp  ransac_2D_line.hpp  utils.hpp
include/ransac_project/: control.hpp  handlePoints.hpp  laser.hpp  platform.hpp  ransac2Dline.hpp  ransac_2Dline.hpp  ransac_classes.hpp  ransac_control.hpp  ransac_laser.hpp  ransac_lib.hpp  svd.hpp  topics.hpp  utils.hpp
launch/: bag-tf.launch  bisector_node.launch  control_node.launch  full.launch  hokuyo.launch  nodeControl.launch  nodeRansac.launch  nodeVisual.launch  pioneer.launch  ransac_cafe.launch  ransac_corredor.launch  ransac_full.launch  ransac_pionner.launch  ransac_sim.launch  readme.txt  stat_config_bags.launch  stat_config_vero.launch
msg/: Bisectrix.msg  BorderLines.msg  CarCommand.msg  LineCoeffs3Stamped.msg  StateFilterStamped.msg
script/: filter.py  filter_node.py  kalman.py  pub.py  utils.py
src/: bisector_node.cpp  control.cpp  controlPIV.cpp  control_node.cpp  control_piv.cpp  converter.cpp  dataplot.cpp  handlePoints.cpp  handle_points.cpp  kalman.cpp  laser.cpp  nodeControl.cpp  nodeRansac.cpp  nodeVisual.cpp  platform.cpp  ransac.cpp  ransac2Dline.cpp  ransac_2D_line.cpp  ransac_2Dline.cpp  ransac_classes.cpp  ransac_control.cpp  ransac_laser.cpp  ransac_lib.cpp  ransac_node.cpp  svd.cpp  test.py  to_twist_node.cpp  utils.cpp  vero2pioneer.cpp  visual_node.cpp
test/: test_node.cpp
yaml/: config.yaml
